[package]
name = "minidisc-gui"
version = "0.1.0"
edition = "2024"

[dependencies]
cross_usb = "0.4.0"
eframe = { version = "0.31", default-features = false, features = ["accesskit", "default_fonts", "wayland", "web_screen_reader", "wgpu", "x11"] }
egui_extras = { version = "0.31", features = ["all_loaders", "image", "svg"] }
env_logger = "0.11.8"
futures-lite = "2.6.0"
log = "0.4.27"
minidisc = { version = "0.1.3", path = "../minidisc-rs" }
